UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_NDC_Change_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Pheonix_Customer_Approval__c</fullName>
        <label>Customer Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                    <isActive>false</isActive>
                    <label>Approve</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                    <isActive>false</isActive>
                    <label>Reject</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_3_Months_Annualized_Quantity__c</fullName>
        <label>3 Months Annualized Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NDC Change Line Items</relationshipLabel>
        <relationshipName>NDC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Actual_Quantity_Last_12m__c</fullName>
        <label>Actual Qty Last 12m</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Awarded_Position__c</fullName>
        <label>Awarded Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Awarded_Quantity__c</fullName>
        <label>Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Internal_Description__c</fullName>
        <label>Contract Internal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>NDC Change Line Items</relationshipLabel>
        <relationshipName>NDC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval_Remarks__c</fullName>
        <label>Contracts Approval Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval__c</fullName>
        <label>Contracts Sent to Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                    <isActive>false</isActive>
                    <label>Approve</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                    <isActive>false</isActive>
                    <label>Not Approved</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                    <isActive>false</isActive>
                    <label>Reject</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_NPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current NPR</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>NDC Change Line Items</relationshipLabel>
        <relationshipName>NDC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Product_NDC__c</fullName>
        <label>Current Product NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Product_Pack_Size__c</fullName>
        <label>Current Product Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NDC Change Line Items</relationshipLabel>
        <relationshipName>NDC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Acceptance_Remarks__c</fullName>
        <label>Customer Acceptance Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Finance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Finance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval_Remarks__c</fullName>
        <label>Finance Approval Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                    <isActive>false</isActive>
                    <label>Approve</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                    <isActive>false</isActive>
                    <label>Reject</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Rejection_Noti_All_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rejection Notification To All Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Lead_Time__c</fullName>
        <inlineHelpText>in days</inlineHelpText>
        <label>Lead Time (SCM)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Code__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Monthly_Var_Awarded_v_s_12m_Actu__c</fullName>
        <formula>Phoenix_Var_Awarded_vs_12m_Actual_Qty__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Var (Awarded v/s 12m Actual Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Monthly_Var_Awarded_v_s_3m_Annua__c</fullName>
        <formula>Phoenix_Var_Awarded_vs_3m_Annualized_Qty__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Var (Awarded v/s 3m Annualized Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change Product</label>
        <referenceTo>Phoenix_NDC_Change_Product__c</referenceTo>
        <relationshipLabel>NDC Change Line Items</relationshipLabel>
        <relationshipName>NDC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change</label>
        <referenceTo>Phoenix_NDC_Change__c</referenceTo>
        <relationshipLabel>NDC Change Line Items</relationshipLabel>
        <relationshipName>NDC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Line_Item_Approval_Status__c</fullName>
        <label>NDC Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supply Chain Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts Pending</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Country Head Pending</fullName>
                </value>
                <value>
                    <fullName>Country Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Pending</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service Pending</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Finance Pending</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_New_NDC_Effective_Date__c</fullName>
        <label>New NDC Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Product_NDC__c</fullName>
        <label>Proposed Product NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Product_Pack_Size__c</fullName>
        <label>Proposed Product Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NDC Change Line Items (Proposed Product)</relationshipLabel>
        <relationshipName>NDC_Change_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_SCM_Approval_Y_N__c</fullName>
        <label>SCM Approval YN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_SCM_Approval__c</fullName>
        <label>SCM Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_SCM_Approved_Quantity__c</fullName>
        <label>SCM Approved Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_SCM_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCM Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_SCM_Rejection_Reason__c</fullName>
        <label>SCM Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sent_to_Customer_Date__c</fullName>
        <label>Sent to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Submitter_Remarks__c</fullName>
        <label>Submitter Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Var_Awarded_vs_12m_Actual_Qty__c</fullName>
        <formula>Phoenix_Awarded_Quantity__c  -  Phoenix_Actual_Quantity_Last_12m__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var (Awarded v/s 12m Actual Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Var_Awarded_vs_3m_Annualized_Qty__c</fullName>
        <formula>Phoenix_Awarded_Quantity__c  -  Phoenix_3_Months_Annualized_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var (Awarded v/s 3m Annualized Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Approval_Remarks__c</fullName>
        <label>Vistex Approval Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Approval__c</fullName>
        <label>Vistex Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                    <isActive>false</isActive>
                    <label>Approve</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                    <isActive>false</isActive>
                    <label>Not Approved</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                    <isActive>false</isActive>
                    <label>Reject</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vistex Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_is_Vistex_Noti_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Vistex Noti Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>NDC Change Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NDCChangeLineItem-{000000}</displayFormat>
        <label>NDC Change Line Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDC Change Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>